--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="confetti">🎁✨🎈🎊🎉</div>
   </div>
 
-  <audio id="music" src="https://www.bensound.com/bensound-music/bensound-buddy.mp3" autoplay loop></audio>
+  <audio id="music" src="https://youtu.be/90w2RegGf9w?feature=shared" autoplay loop></audio>
 
   <script>
     function openBox() {
