--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="confetti">🎁✨🎈🎊🎉</div>
   </div>
 
-  <audio id="music" src="https://youtu.be/90w2RegGf9w?feature=shared" autoplay loop></audio>
+  <audio id="music" src="https://www.bensound.com/bensound-music/bensound-buddy.mp3" autoplay loop></audio>
 
   <script>
     function openBox() {
@@ -198,7 +198,7 @@
         emoji.className = "falling-emoji";
         emoji.textContent = ["🎉", "🎈", "🎁", "✨", "💖"][Math.floor(Math.random() * 5)];
         emoji.style.left = Math.random() * 100 + "vw";
-        emoji.style.animationDuration = (2 + Math.random() * 3) + "s";
+        emoji.style.animationDuration = (2 + Math.random() * 2) + "s";
         document.body.appendChild(emoji);
       }
     }
